--- a/Conjugate/View/Cells/TenseTableViewCell.xib
+++ b/Conjugate/View/Cells/TenseTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,15 +29,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnN-ll-pbG" customClass="AnimatedButton" customModule="Conjugate" customModuleProvider="target">
-                        <rect key="frame" x="310" y="-1" width="44" height="44"/>
+                        <rect key="frame" x="329" y="-1" width="36" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="44" id="LrU-nk-eTI"/>
+                            <constraint firstAttribute="width" constant="36" id="LrU-nk-eTI"/>
                             <constraint firstAttribute="height" constant="44" id="gUE-JJ-8vo"/>
                         </constraints>
                         <state key="normal" image="speaker"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="haben" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mb-YR-kQq">
-                        <rect key="frame" x="96" y="11" width="200" height="21"/>
+                        <rect key="frame" x="96" y="11" width="219" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -51,7 +51,7 @@
                     <constraint firstItem="7bB-Dv-HMW" firstAttribute="leading" secondItem="KdT-yC-fD7" secondAttribute="leadingMargin" id="VJf-Vj-bUh"/>
                     <constraint firstAttribute="bottom" secondItem="BnN-ll-pbG" secondAttribute="bottom" id="Zgt-AC-Whn"/>
                     <constraint firstItem="7bB-Dv-HMW" firstAttribute="top" secondItem="KdT-yC-fD7" secondAttribute="topMargin" constant="3" id="bhj-HP-AVu"/>
-                    <constraint firstAttribute="trailing" secondItem="BnN-ll-pbG" secondAttribute="trailing" constant="21" id="nyu-Yd-QVW"/>
+                    <constraint firstAttribute="trailing" secondItem="BnN-ll-pbG" secondAttribute="trailing" constant="10" id="nyu-Yd-QVW"/>
                     <constraint firstAttribute="bottomMargin" secondItem="6Mb-YR-kQq" secondAttribute="bottom" constant="3" id="wn3-k3-IyG"/>
                     <constraint firstItem="6Mb-YR-kQq" firstAttribute="top" secondItem="KdT-yC-fD7" secondAttribute="topMargin" constant="3" id="y7B-Md-tID"/>
                 </constraints>
