--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -278,40 +278,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RP2-nm-OWd">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SavedVerbCell" textLabel="qEq-up-d9d" detailTextLabel="hmT-R9-fNw" style="IBUITableViewCellStyleSubtitle" id="UPp-MT-Cdy" customClass="SavedVerbCell" customModule="Conjugate" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="55"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UPp-MT-Cdy" id="RR2-b1-8yD">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="54.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qEq-up-d9d">
-                                                    <rect key="frame" x="15" y="10" width="36.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hmT-R9-fNw">
-                                                    <rect key="frame" x="15" y="30.5" width="33" height="14.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" white="0.20286800986842105" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="8rJ-Kc-sve" id="pT8-TT-DPe"/>
-                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="ySt-NZ-sdW"/>
-                                </connections>
-                            </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sad_face" translatesAutoresizingMaskIntoConstraints="NO" id="Vix-5e-hLn">
                                 <rect key="frame" x="139.5" y="207.5" width="96" height="96"/>
                                 <constraints>
@@ -328,25 +294,43 @@
                                 <color key="textColor" red="0.33816406249999997" green="0.33816406249999997" blue="0.33816406249999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Sj-bm-PnB">
+                                <rect key="frame" x="0.0" y="64" width="375" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="sKd-oy-puj"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="IIW-lN-sfS" kind="embed" identifier="tabbedMenuSegue" id="0pI-YJ-3GW"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FkH-CN-qre">
+                                <rect key="frame" x="0.0" y="116" width="375" height="551"/>
+                                <connections>
+                                    <segue destination="aZI-D3-i6f" kind="embed" identifier="tabbedContentSegue" id="I9I-Fv-Urh"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="RP2-nm-OWd" secondAttribute="trailing" id="3q6-9b-p6q"/>
-                            <constraint firstItem="RP2-nm-OWd" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="-64" id="BJe-y9-bO2"/>
+                            <constraint firstItem="5Sj-bm-PnB" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="2qt-oe-qwc"/>
+                            <constraint firstAttribute="trailing" secondItem="FkH-CN-qre" secondAttribute="trailing" id="5Je-xp-RGT"/>
+                            <constraint firstItem="FkH-CN-qre" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="5sB-q9-KEt"/>
+                            <constraint firstItem="FkH-CN-qre" firstAttribute="top" secondItem="5Sj-bm-PnB" secondAttribute="bottom" id="C09-lh-woc"/>
                             <constraint firstItem="Vix-5e-hLn" firstAttribute="centerX" secondItem="b9E-W4-2Xj" secondAttribute="centerX" id="GLO-Uo-XMH"/>
-                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="RP2-nm-OWd" secondAttribute="bottom" id="Meg-cO-uA1"/>
+                            <constraint firstAttribute="trailing" secondItem="5Sj-bm-PnB" secondAttribute="trailing" id="Nos-oW-jsl"/>
                             <constraint firstItem="b9E-W4-2Xj" firstAttribute="centerY" secondItem="QS5-Rx-YEW" secondAttribute="centerY" id="RMP-aX-ktv"/>
-                            <constraint firstItem="RP2-nm-OWd" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="exj-j2-6gD"/>
+                            <constraint firstItem="5Sj-bm-PnB" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" id="eAt-ZN-fmG"/>
                             <constraint firstItem="b9E-W4-2Xj" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="i2K-oy-RWM"/>
                             <constraint firstAttribute="trailing" secondItem="b9E-W4-2Xj" secondAttribute="trailing" id="jOZ-Z7-r91"/>
+                            <constraint firstAttribute="bottom" secondItem="FkH-CN-qre" secondAttribute="bottom" id="tU3-qm-jIc"/>
                             <constraint firstItem="b9E-W4-2Xj" firstAttribute="top" secondItem="Vix-5e-hLn" secondAttribute="bottom" constant="10" id="xdb-GG-Feg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dSc-jc-Sbt"/>
                     <connections>
+                        <outlet property="menuHeightConstraint" destination="sKd-oy-puj" id="pwy-P2-flv"/>
                         <outlet property="noVerbsImageView" destination="Vix-5e-hLn" id="1JR-IC-QGl"/>
                         <outlet property="noVerbsLabel" destination="b9E-W4-2Xj" id="tgF-3e-Zd8"/>
-                        <outlet property="tableView" destination="RP2-nm-OWd" id="Rbo-8c-uK3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
@@ -723,6 +707,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MwM-5g-FLA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2676" y="1092.5037481259371"/>
+        </scene>
+        <!--Tabbed Menu View Controller-->
+        <scene sceneID="ZqE-ra-ypv">
+            <objects>
+                <viewController id="IIW-lN-sfS" customClass="TabbedMenuViewController" customModule="Conjugate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B9w-hv-ts7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QXG-sG-KE4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2796" y="435"/>
+        </scene>
+        <!--Tabbed Content View Controller-->
+        <scene sceneID="gDL-Ib-Hag">
+            <objects>
+                <viewController id="aZI-D3-i6f" customClass="TabbedContentViewController" customModule="Conjugate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XH8-ph-0XL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RBu-cI-T7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3647" y="698"/>
         </scene>
     </scenes>
     <resources>
